--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@ ul.topnav li.right {float: right;}
 <body>
   
   <ul>
-  <li><a href="index.html"><i class="fa fa-home"></i></a></li>
-  <li><a href="contact.html">Contact</a></li>
-  <li><a class="active" href="about.html">About</a></li>
+  <li><a class="active" href="index.html"><i class="fa fa-home"></i></a></li>
+  <li><a href="services.html"><i class="fas fa-clipboard-list"></i>Services</a></li>
+  <li><a href="contact.html"><i class="fas fa-envelope"></i>Contact</a></li>
 </ul>
   
   <center>
     <h1>
-      Emperor Mansfield of the Milky Way Galaxy
+      Tutoría Inglés
       </h1>
-      <img src="https://i.imgur.com/RrEKJ0R.jpg" alt="Emperor Mansfield" class="responsive">
+      <img src="https://i.imgur.com/01lkyOM.png" alt="USA/UK Flag" class="w3-image">
   
   <p>Recently, our archeologists have discovered an abandoned spaceship on the edge of the Milky Way Galaxy. <br>
   Once thought to be void of life, this discovery is surely proof that an ancient civilization once lived on a planet here.<br>
